--- a/RentaCar/RentaCar/RentaCar.csproj
+++ b/RentaCar/RentaCar/RentaCar.csproj
@@ -239,7 +239,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701121844074_Nombre.cs" />
+    <Compile Include="Migrations\201701121844074_Nombre.Designer.cs">
+      <DependentUpon>201701121844074_Nombre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BuscadorPrincipal.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -277,6 +283,7 @@
     <Content Include="fonts\themify.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Imagenes\auto_registro.jpg" />
     <Content Include="Imagenes\Fondo_Index.jpg" />
     <Content Include="js\bootstrap-datepicker.min.js" />
     <Content Include="js\bootstrap-datetimepicker.min.js" />
@@ -309,8 +316,6 @@
       <DependentUpon>RentEDM.edmx</DependentUpon>
     </Content>
     <Content Include="css\.DS_Store" />
-    <Content Include="css\bootstrap.css.map" />
-    <Content Include="css\style.css.map" />
     <Content Include="js\.DS_Store" />
     <Content Include="fonts\themify.eot" />
     <Content Include="fonts\themify.ttf" />
@@ -374,6 +379,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201701121844074_Nombre.resx">
+      <DependentUpon>201701121844074_Nombre.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
