--- a/RentaCar/RentaCar/RentaCar.csproj
+++ b/RentaCar/RentaCar/RentaCar.csproj
@@ -44,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ImageProcessor, Version=2.5.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImageProcessor.2.5.2\lib\net45\ImageProcessor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -197,6 +201,11 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Admin\AreaAdminRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\VehiculosController.cs" />
+    <Compile Include="Areas\Admin\Models\Estadisticas.cs" />
+    <Compile Include="Areas\Admin\Models\VehiculoModelo.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CompraController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -217,6 +226,9 @@
     <Compile Include="Datos\Categoria.cs">
       <DependentUpon>RentEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Datos\DetalleSeguro.cs">
+      <DependentUpon>RentEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Datos\Orden.cs">
       <DependentUpon>RentEDM.tt</DependentUpon>
     </Compile>
@@ -235,6 +247,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RentEDM.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Datos\Seguro.cs">
+      <DependentUpon>RentEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Datos\Vehiculo.cs">
       <DependentUpon>RentEDM.tt</DependentUpon>
     </Compile>
@@ -248,6 +263,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BuscadorPrincipal.cs" />
+    <Compile Include="Models\CompraIndex.cs" />
     <Compile Include="Models\Enum\EstadoOrden.cs" />
     <Compile Include="Models\FiltroFechas.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -256,8 +272,21 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_NavigationSide.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_NavigationTop.cshtml" />
+    <Content Include="Content\bootstrap-fileinput\css\fileinput.css" />
+    <Content Include="Content\bootstrap-fileinput\css\fileinput.min.css" />
+    <Content Include="Content\bootstrap-fileinput\img\loading-sm.gif" />
+    <Content Include="Content\bootstrap-fileinput\img\loading.gif" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\admin\bootstrap-reset.css" />
+    <Content Include="css\admin\style-responsive.css" />
+    <Content Include="css\admin\style.css" />
     <Content Include="css\animate.css" />
     <Content Include="css\bootstrap-datepicker.min.css" />
     <Content Include="css\bootstrap-datetimepicker.min.css" />
@@ -286,6 +315,7 @@
     <Content Include="fonts\bootstrap\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\bootstrap\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\themify-icons\themify.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -293,6 +323,12 @@
     <Content Include="Imagenes\Autos\AutoRojo.png" />
     <Content Include="Imagenes\auto_registro.jpg" />
     <Content Include="Imagenes\Fondo_Index.jpg" />
+    <Content Include="Imagenes\loader.gif" />
+    <Content Include="Imagenes\puerta.png" />
+    <Content Include="js\admin\app.js" />
+    <Content Include="js\admin\fileinput.js" />
+    <Content Include="js\admin\fileinput.min.js" />
+    <Content Include="js\admin\fileinput_locale_es.js" />
     <Content Include="js\bootstrap-datepicker.min.js" />
     <Content Include="js\bootstrap-datetimepicker.min.js" />
     <Content Include="js\bootstrap.min.js" />
@@ -308,14 +344,19 @@
     <Content Include="js\modernizr-2.6.2.min.js" />
     <Content Include="js\moment-whit-locales.js" />
     <Content Include="js\moment.min.js" />
+    <Content Include="js\nicescroll\jquery.nicescroll.min.js" />
+    <Content Include="js\nicescroll\zoomico.png" />
     <Content Include="js\owl.carousel.min.js" />
     <Content Include="js\respond.min.js" />
+    <Content Include="js\ripples\css\ripples.css" />
+    <Content Include="js\ripples\css\ripples.min.css" />
+    <Content Include="js\ripples\js\ripples.init.js" />
+    <Content Include="js\ripples\js\ripples.js" />
+    <Content Include="js\ripples\js\ripples.min.js" />
     <Content Include="js\sweet-alert\sweetalert.css" />
     <Content Include="js\sweet-alert\sweetalert.min.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -334,7 +375,28 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\bootstrap\glyphicons-halflings-regular.woff2" />
+    <Content Include="js\ripples\css\ripples.css.map" />
+    <Content Include="js\ripples\css\ripples.min.css.map" />
+    <Content Include="js\ripples\js\ripples.min.js.map" />
+    <Content Include="Areas\Admin\Views\Web.config" />
+    <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\Vehiculos\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Vehiculos\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Vehiculos\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Vehiculos\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Vehiculos\Index.cshtml" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
