--- a/RentaCar/RentaCar/Web.config
+++ b/RentaCar/RentaCar/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="data source=localhost;initial catalog=RentaCar;user id=sa;password=789456123i;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="RentaCarEntities" connectionString="metadata=res://*/Datos.RentEDM.csdl|res://*/Datos.RentEDM.ssdl|res://*/Datos.RentEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=RentaCar;user id=sa;password=789456123i;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="RentaCarEntities" connectionString="metadata=res://*/Datos.RentEDM.csdl|res://*/Datos.RentEDM.ssdl|res://*/Datos.RentEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=RentaCar;user id=sa;password=789456123i;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="RentaCarEntities" connectionString="metadata=res://*/Datos.RentEDM.csdl|res://*/Datos.RentEDM.ssdl|res://*/Datos.RentEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=RentaCar;user id=sa;password=789456123i;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
